<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Creacion_de_Tab"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@color/teal_200"
        app:tabIndicatorColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabcontacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icono_contacto"
            android:text="@string/contacto"
            app:tabIndicatorColor="@color/white"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabcorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icono_correo"
            android:text="@string/correo"
            app:tabIndicatorColor="@color/white"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabmensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icono_mensaje"
            android:text="@string/mensaje"
            app:tabIndicatorColor="@color/white"/>


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>